syntax = "proto3";
package Toolset.ProtocolBuffers.Tests;

import "google/protobuf/timestamp.proto";

message ExamplePersistentProto{
  string ExampleString = 1;
  int32 ExampleInt = 2;
  google.protobuf.Timestamp LastUpdated = 3;
}